--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div id="bloc_page">
-          <!-- début du header -->
+          <header><!-- début du header -->
                 <div id="titre_principal">
                     <div class="logo">
                         <img src="images/SIN_logo.png" alt="Logo SIN" />
@@ -16,45 +16,45 @@
                     </div>
 
                 </div>
-                <!-- Début du nav -->
+                <nav><!-- Début du nav -->
                     <ul>
-                        <li>Accueil</li>
-                        <li>Html</li>
-                        <li>CSS</li>
-                        <li>Le lycée</li>
+                        <li><a href="index.html" target="_self">Accueil</a></li>
+                        <li><a href="html.html" target="_self">Html</a></li>
+                        <li><a href="CSS.html" target="_self">CSS</a></li>
+                        <li><a href="https://aragon-picasso.ent.auvergnerhonealpes.fr">Le lycée</a></li>
                     </ul>
-                <!-- Fin du nav -->
-          <!-- Fin du header -->
+                </nav><!-- Fin du nav -->
+          </header><!-- Fin du header -->
           <div id="banniere_image">
                 <div id="banniere_description">
                   Bienvenue sur le site de la section STI2D SIN
                 </div>
             </div>
-          <!-- Début de section -->
-                <!-- Début de article -->
+          <section><!-- Début de section -->
+                <article><!-- Début de article -->
                     <div class="logo"><img src="images/HTML5_CSS3.png" alt="présentation HTML"/><h1>Premier site HTML5/CSS3</h1>
                     </div>
 
                   <p><strong>L’HyperText Markup Language</strong>, généralement abrégé HTML, est le langage de balisage conçu pour représenter les pages web. C’est un langage permettant d’écrire de l’hypertexte, d’où son nom. HTML permet également de structurer sémantiquement et logiquement et de mettre en forme le contenu des pages, d’inclure des ressources multimédias dont des images, des formulaires de saisie et des programmes informatiques. Il permet de créer des documents interopérables avec des équipements très variés de manière conforme aux exigences de l’accessibilité du web. Il est souvent utilisé conjointement avec le langage de programmation JavaScript et des feuilles de style en cascade (CSS) (source <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank">Wikipedia</a>). </p>
                     <p>Ce langage est structuré autour de balises qui indiquent au navigateur la manière dont ils doivent afficher le document. Il en existe des centaines ; certaines sont abandonnées au fur et à mesure que le langage évolue. Une balise est composé d'un chevron ouvrant &quot&gt;&quot puis du nom de la balise suivi éventuellement d'attributs et terminé par un chevron fermant &quot&gt;&quot. </p>
                   <p><strong>Les feuilles de style en cascade</strong>, généralement appelées CSS (de l'anglais Cascading Style Sheets), forment un langage informatique qui décrit la présentation des documents HTML et XML. Les standards définissant CSS sont publiés par le World Wide Web Consortium (W3C). Introduit au milieu des années 1990, CSS devient couramment utilisé dans la conception de sites web et bien pris en charge par les navigateurs web dans les années 2000 (source Wikipedia).</p><!-- lien web vers http://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade ouvert dans un nouvel onglet -->
-              <!-- fin de article-->
-              <!-- début du aside -->
+              </article><!-- fin de article-->
+              <aside><!-- début du aside -->
                     <h2>Exigences</h2>
                     <img src="images/bulle.png" alt="" id="fleche_bulle" />
                     <p>Le code doit être lisible et conforme aux exigences.</p>
                     <p>Un outil de validation est disponible <a href="https://validator.w3.org/unicorn/?ucn_lang=fr"> ICI</a></p>
 
-                <div id="social"><!-- Insertion des images facebook, twitter et RSS à cet endroit, tous sur la même ligne sans toucher au div -->
+                <div id="social"><img src="images/facebook.png" alt="Logo Facebook" /><!-- Insertion des images facebook, twitter et RSS à cet endroit, tous sur la même ligne sans toucher au div -->
                 </div>
-              <!-- fin du aside -->
-          <!-- fin de section -->
+              </aside><!-- fin du aside -->
+          </section><!-- fin de section -->
 
           <hr /><!-- ceci est un trait horizontal -->
-          <!-- début du footer -->
+          <footer><!-- début du footer -->
                 <div id="videos">
                     <h3>Une superbe vidéo</h3>
-                    <!-- Insérer ici le lien youtube de la vidéo -->
+                    https://youtu.be/GqD6AiaRo3U<!-- Insérer ici le lien youtube de la vidéo -->
                 </div>
                 <div id="des_photos">
                     <h3>Des jolies photos</h3>
@@ -73,7 +73,7 @@
                       <!-- fin de la liste de la premiere colponne -->
                     </div>
                 </div>
-          <!-- fin de footer -->
+          </footer><!-- fin de footer -->
         </div>
     </body>
 </html>
