--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="index.html" target="_self">Accueil</a></li>
                         <li><a href="html.html" target="_self">Html</a></li>
                         <li><a href="CSS.html" target="_self">CSS</a></li>
-                        <li><a href="https://aragon-picasso.ent.auvergnerhonealpes.fr">Le lycée</a></li>
+                        <li><a href="https://aragon-picasso.ent.auvergnerhonealpes.fr" target="_blank">Le lycée</a></li>
                     </ul>
                 </nav><!-- Fin du nav -->
           </header><!-- Fin du header -->
@@ -37,7 +37,7 @@
 
                   <p><strong>L’HyperText Markup Language</strong>, généralement abrégé HTML, est le langage de balisage conçu pour représenter les pages web. C’est un langage permettant d’écrire de l’hypertexte, d’où son nom. HTML permet également de structurer sémantiquement et logiquement et de mettre en forme le contenu des pages, d’inclure des ressources multimédias dont des images, des formulaires de saisie et des programmes informatiques. Il permet de créer des documents interopérables avec des équipements très variés de manière conforme aux exigences de l’accessibilité du web. Il est souvent utilisé conjointement avec le langage de programmation JavaScript et des feuilles de style en cascade (CSS) (source <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language" target="_blank">Wikipedia</a>). </p>
                     <p>Ce langage est structuré autour de balises qui indiquent au navigateur la manière dont ils doivent afficher le document. Il en existe des centaines ; certaines sont abandonnées au fur et à mesure que le langage évolue. Une balise est composé d'un chevron ouvrant &quot&gt;&quot puis du nom de la balise suivi éventuellement d'attributs et terminé par un chevron fermant &quot&gt;&quot. </p>
-                  <p><strong>Les feuilles de style en cascade</strong>, généralement appelées CSS (de l'anglais Cascading Style Sheets), forment un langage informatique qui décrit la présentation des documents HTML et XML. Les standards définissant CSS sont publiés par le World Wide Web Consortium (W3C). Introduit au milieu des années 1990, CSS devient couramment utilisé dans la conception de sites web et bien pris en charge par les navigateurs web dans les années 2000 (source Wikipedia).</p><!-- lien web vers http://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade ouvert dans un nouvel onglet -->
+                  <p><strong>Les feuilles de style en cascade</strong>, généralement appelées CSS (de l'anglais Cascading Style Sheets), forment un langage informatique qui décrit la présentation des documents HTML et XML. Les standards définissant CSS sont publiés par le World Wide Web Consortium (W3C). Introduit au milieu des années 1990, CSS devient couramment utilisé dans la conception de sites web et bien pris en charge par les navigateurs web dans les années 2000 (source <a href="http://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank">Wikipedia</a>).</p>
               </article><!-- fin de article-->
               <aside><!-- début du aside -->
                     <h2>Exigences</h2>
@@ -45,7 +45,7 @@
                     <p>Le code doit être lisible et conforme aux exigences.</p>
                     <p>Un outil de validation est disponible <a href="https://validator.w3.org/unicorn/?ucn_lang=fr"> ICI</a></p>
 
-                <div id="social"><img src="images/facebook.png" alt="Logo Facebook" /><!-- Insertion des images facebook, twitter et RSS à cet endroit, tous sur la même ligne sans toucher au div -->
+                <div id="social"><img src="images/facebook.png" alt="Logo Facebook" /><img src="images/twitter.png" alt="Logo Twitter" /><img src="images/rss.png" alt="Logo Rss" /><!-- Insertion des images facebook, twitter et RSS à cet endroit, tous sur la même ligne sans toucher au div -->
                 </div>
               </aside><!-- fin du aside -->
           </section><!-- fin de section -->
@@ -54,7 +54,7 @@
           <footer><!-- début du footer -->
                 <div id="videos">
                     <h3>Une superbe vidéo</h3>
-                    https://youtu.be/GqD6AiaRo3U<!-- Insérer ici le lien youtube de la vidéo -->
+                    <iframe width="275" height="160" src="https://www.youtube.com/embed/GqD6AiaRo3U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div id="des_photos">
                     <h3>Des jolies photos</h3>
@@ -63,14 +63,14 @@
                 <div id="sites_interessants">
                     <h3>Des sites super intéressants</h3>
                     <div id="listes_sites">
-                      <!-- début de la liste de la premiere colonne -->
-                          Site du lycée<!-- lien web vers https://aragon-picasso.ent.auvergnerhonealpes.fr ouvert dans un nouvel onglet -->
-                          Académie de Lyon<!-- lien web vers http://www.ac-lyon.fr ouvert dans un nouvel onglet -->
-                      <!-- fin de la liste de la premiere colponne -->
-                      <!-- début de la liste de la premiere colonne -->
-                          Google<!-- lien web vers http://www.google.fr ouvert dans un nouvel onglet -->
-                          GitHub<!-- lien web vers https://github.com ouvert dans un nouvel onglet -->
-                      <!-- fin de la liste de la premiere colponne -->
+                      <ul>
+                          <li><a href="http://aragon-picasso.ent.auvergnerhonealpes.fr" target="_blank">Site du lycée </a></li>
+                          <li><a href="http://www.ac-lyon.fr" target="_blank">Académie de Lyon</a></li>
+                      </ul>
+                      <ul>
+                          <li><a href="http://google.fr" target="_blank">Google</a></li>
+                          <li><a href="https://github.com" target="_blank"> GitHub</a></li>
+                      </ul>
                     </div>
                 </div>
           </footer><!-- fin de footer -->
